--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: BY Blog
+title: MIA'S Blog
 SEOTitle: 海媚的博客 | BY Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/desktop.jpg
 email: liuhaimei522@gmail.com
 description: "I want to gain weights."
-keyword: "BY, BY Blog, 海媚的博客, liuhaimei, 刘海媚, iOS, Apple, iPhone"
+keyword: "MIA, MIA Blog, 米啊的博客, mia"
 url: "http://haimeil.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/haimeil/haimeil.github.io.git" # you code repository
@@ -12,7 +12,7 @@ github_repo: "https://github.com/haimeil/haimeil.github.io.git" # you code repos
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/mia.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -98,18 +98,18 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
-    }
-]
+#friends: [
+#    {
+#        title: "WY",
+#        href: "http://zhengwuyang.com"
+#     },{
+#         title: "简书·BY",
+#         href: "http://www.jianshu.com/u/e71990ada2fd"
+#     },{
+#         title: "Apple",
+#         href: "https://apple.com"
+#     },{
+#         title: "Apple Developer",
+#         href: "https://developer.apple.com/"
+#     }
+# ]
